adds menu to homepage

--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -1,2 +1,6 @@
-<h1>Hello World</h1>
-Hello {{ name }}
+{% extends "Layout.html" %}
+{% block content %}
+
+	<h1>Hello World</h1>
+	Hello {{ name }}
+{% endblock %}
